# smart_converter

./: Anchor.toml  Cargo.toml  Makefile  README.md  Readme.md  eslint.config.js  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vitest.config.mts
programs/omnisol/: Cargo.toml
programs/omnisol/src/: lib.rs  state.rs
programs/omnisol/src/instructions/: add_manager.rs  add_pair.rs  add_user_to_whitelist.rs  change_platform_state.rs  lock_tokens.rs  mod.rs  remove_manager.rs  set_admin.rs  unlock_tokens.rs  update_manager.rs  update_pair.rs  update_user_state.rs
programs/smart-converter/: Cargo.toml
programs/smart-converter/src/: lib.rs
programs/smart-converter/src/instructions/: add_user_to_whitelist.rs  unlock_tokens.rs  update_user_state.rs
programs/smart_converter/: Cargo.toml  README.md
programs/smart_converter/src/: events.rs  lib.rs  state.rs
programs/smart_converter/src/instructions/: add_manager.rs  add_pair.rs  add_user_to_whitelist.rs  change_platform_state.rs  lock_tokens.rs  mod.rs  remove_user_from_whitelist.rs  set_admin.rs  unlock_tokens.rs  update_manager.rs  update_pair.rs  update_user_state.rs  withdraw_fee.rs
programs/smart_converter/src/utils/: access_verification.rs  assert.rs  common.rs  mod.rs
tests/: omnisol.ts  smart_converter.spec.ts  smart_converter.ts  utils.ts
