[package]
name = "smart_converter"
version = "0.0.4"
license = "Apache-2.0"
description = "Smart-converter Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
albus-verifier = "0.1.0"
